# Change file for File::Hotfolder

{{$NEXT}}
    - extended logging

0.03  2015-03-24 14:34:48 CET
    - fixed filter option
    - new option: catch

0.02  2015-03-24 12:29:01 CET
    - improved documentation and examples
    - new options: print, fullname, filter

0.01  2015-03-23 17:14:18 CET
    - inital release