@@ -3,8 +3,8 @@ use warnings;
 use v5.10;
 use File::Hotfolder;
 
-# watch a given directory and print all new or modified files 
-File::Hotfolder->new( 
+# watch a given directory and print all events
+watch( 
     watch => ($ARGV[0] // '.'),
-    print => FOUND_FILE,
+    print => HOTFOLDER_ALL,
 )->loop;
